<resources>
    <string name="app_name">Classify v1.0</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Strings related to login -->
    <string name="prompt_username">username</string>
    <string name="prompt_password">password</string>
    <string name="action_login_in">Login in</string>
    <string name="error_empty_username">username cannot be empty</string>
    <string name="error_empty_password">password cannot be empty</string>
    <string name="error_login">Incorrect username or password</string>

    <!-- Strings related to home -->
    <string name="action_classes">Classes</string>
    <string name="action_profile">Profile</string>
    <string name="action_schedules">Schedules</string>
    <string name="action_students">Students</string>
    <string name="description_classes">Tap to view your classes</string>
    <string name="description_profile">Tap to view your profiles</string>
    <string name="description_schedules">Tap to view your schedules</string>
    <string name="description_students">Tap to view your students</string>
</resources>
